...
                colors = appTopAppBarColors()
            )
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = { onAction(EmergencyContactListUiAction.AddClick) },
                modifier = Modifier.testTag("MedicalContactList_AddButton")
            ) {
                Icon(Icons.Rounded.Add, contentDescription = stringResource(R.string.common_add))
            }
        }
    ) { padding ->
        when (uiState.screenState) {
...
